--- a/src/invest_frontend/index.html
+++ b/src/invest_frontend/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
   <title>IC Hello Starter</title>
   <base href="/" />
   <link rel="icon" href="/favicon.ico" />
